<resources>
    <string name="app_name">OkLedger</string>
    <string name="text_net_balance">Net Balance</string>
    <string name="text_net_balance_received">Received</string>
    <string name="text_net_balance_given">Given</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="text_title_dashboard">Dashboard</string>
    <string name="text_title_add_party">Add Party</string>
    <string name="text_title_edit_profile">Edit Profile</string>
    <string name="text_title_view_statement">View Statement</string>
    <string name="text_no_parties_yet_add_a_party">No parties yet. Add a party.</string>
    <string name="text_no_statement_yet">No statement yet.</string>
    <string name="text_add_party">Add Party</string>
    <string name="text_ok_ledger">Ok Ledger</string>
    <string name="text_received">Received</string>
    <string name="text_given">Given</string>
    <string name="text_submit">Submit</string>
    <string name="text_enter_amount">Enter Amount</string>
    <string name="text_add_note">Add Note</string>
    <string name="text_mobile_number_optional">Mobile Number (Optional)</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_update">Update</string>
    <string name="text_download">Download</string>
    <string name="text_delete">Delete</string>
    <string name="text_party_name">Party Name</string>
    <string name="text_party_address">Party Address</string>
    <string name="text_enter_mobile_number">Enter Mobile Number</string>
    <string name="text_continue">Continue</string>
    <string name="text_select_date">Select Date</string>
    <string name="text_opening_balance">Opening Balance</string>
    <string name="hint_mobile_number">Enter Mobile Number</string>
    <string name="text_smart_ledger_for_daily_business">Smart Ledger for Daily Business</string>
    <string name="text_no_transactions_found">No transactions found.</string>
    <string name="text_home_menu">Home</string>
    <string name="text_parties_menu">Parties</string>
    <string name="text_statement_menu">Statement</string>
    <string name="text_logout">Logout</string>
    <string name="text_enter_your_name">Enter your name</string>
    <string name="text_enter_phone_number">Enter phone number</string>
    <string name="text_enter_address">Enter address</string>
    <string name="text_select_date_range">Select Date Range</string>
    <string name="text_search_party">Search party</string>
</resources>