<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_inner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etPartyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:hint="@string/text_party_name"
            android:padding="@dimen/dimen_12dp"
            android:textSize="@dimen/text_12sp" />

        <EditText
            android:id="@+id/etPartyMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/text_mobile_number_optional"
            android:inputType="phone"
            android:padding="@dimen/dimen_12dp"
            android:textSize="@dimen/text_12sp" />


        <LinearLayout
            android:id="@+id/llDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10dp">

            <TextView
                android:id="@+id/tvSelectedDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_select_date"
                android:textSize="@dimen/text_12sp" />

            <ImageView
                android:id="@+id/imgCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar"
                app:tint="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lOpeningBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/etOpeningBalance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:background="@drawable/bg_edittext"
                android:hint="@string/text_opening_balance"
                android:inputType="numberDecimal"
                android:padding="@dimen/dimen_12dp"
                android:textSize="@dimen/text_12sp" />

            <RadioGroup
                android:id="@+id/rgOpeningType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_weight=".6"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbReceived"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/text_received"
                    android:textSize="@dimen/text_12sp" />

                <RadioButton
                    android:id="@+id/rbGiven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/text_given"
                    android:textSize="@dimen/text_12sp" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:background="@drawable/bg_button_primary"
            android:text="@string/text_update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@drawable/bg_rounded_corner_delete"
            android:text="@string/text_delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp" />
    </LinearLayout>


</LinearLayout>
