<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splashRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <!-- Centered logo & app name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <!-- App Icon -->
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher_round" />

        <!-- App Name -->
        <TextView
            android:id="@+id/tvLogo"
            style="@style/S26Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:text="@string/text_ok_ledger"
            android:textColor="@color/white" />
    </LinearLayout>

    <!-- Optional bottom tagline -->
    <TextView
        android:id="@+id/tvTagline"
        style="@style/S14Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="40dp"
        android:text="@string/text_smart_ledger_for_daily_business"
        android:textColor="@color/secondaryColorLight" />

</FrameLayout>
