<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_inner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etPartyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:hint="@string/text_party_name"
            android:padding="@dimen/dimen_12dp"
            android:textSize="@dimen/text_12sp" />

        <EditText
            android:id="@+id/etPartyMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/text_mobile_number_optional"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:padding="@dimen/dimen_12dp"
            android:textSize="@dimen/text_12sp" />

        <EditText
            android:id="@+id/etPartyAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/text_party_address"
            android:inputType="textMultiLine"
            android:padding="@dimen/dimen_12dp"
            android:textSize="@dimen/text_12sp" />

        <LinearLayout
            android:id="@+id/llDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvSelectedDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_select_date"
                android:textSize="@dimen/text_12sp" />

            <ImageView
                android:id="@+id/imgCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_calendar"
                app:tint="@color/colorPrimary" />
        </LinearLayout>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:background="@drawable/bg_button_primary"
            android:text="@string/text_confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp" />
    </LinearLayout>


</LinearLayout>
