<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_inner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_32dp" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/text_enter_amount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="@dimen/dimen_12dp"
        android:textSize="@dimen/text_14sp" />

    <EditText
        android:id="@+id/etNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/text_add_note"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/dimen_12dp"
        android:textSize="@dimen/text_14sp" />

    <LinearLayout
        android:id="@+id/llDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:background="@drawable/bg_edittext"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10dp">

        <TextView
            android:id="@+id/tvSelectedDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_select_date"
            android:textSize="@dimen/text_12sp" />

        <ImageView
            android:id="@+id/imgCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_calendar"
            app:tint="@color/colorPrimary" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:background="@drawable/bg_button_primary"
        android:text="@string/text_submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_14sp" />
</androidx.appcompat.widget.LinearLayoutCompat>
