<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_inner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_32dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTransactions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textNoTransaction"
        style="@style/S16Bold"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/text_no_transactions_found"
        android:visibility="gone" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondaryColorLight"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/dimen_20dp">

        <Button
            android:id="@+id/btnReceived"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_received_given"
            android:text="@string/text_received"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_14sp" />

        <Button
            android:id="@+id/btnGiven"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_received_given"
            android:text="@string/text_given"
            android:textAllCaps="false"
            android:textColor="@color/red" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>
